some style bug's and whitespace fixed.

--- a/src/components/CookieModal.module.css
+++ b/src/components/CookieModal.module.css
@@ -23,6 +23,11 @@
 .text { 
 	font-size: 14px;
 	padding: 0 1rem;
+	text-align: center;
+}
+
+.title { 
+	text-align: center;
 }
 
 .link {
