--- a/src/global.css
+++ b/src/global.css
@@ -26,7 +26,6 @@ a {
   text-align: center;
 }
 .text { 
-  color:#36383b;
   font-size: 1rem;
   max-width: 400px;
   line-height: 20px;
